fix overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -465,11 +465,8 @@ a {
   margin: 10px 0 10px 0;
 }
 
-.chosenRecipes {
-    display: inline;
-    float: left;
-    width: 48.58333%;
-    margin: 0 1.04167%;
+section.chosenMeals {
+  overflow:hidden;
 }
 
 /*# sourceMappingURL=styles.css.map */
